--- a/server-gateway-dev.yml
+++ b/server-gateway-dev.yml
@@ -33,7 +33,7 @@ spring:
         login-password: druid
 
 zuul:
-  sensitive-headers: Cookie,Set-Cookie,Authorization
+  sensitive-headers: Cookie,Set-Cookie
   routes:
     module-user:
       path: /user/**
