--- a/sercer-oauth-dev.yml
+++ b/sercer-oauth-dev.yml
@@ -3,3 +3,11 @@ env: dev
 server:
   port: 8401
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+spring:
+  application:
+    name: SERCER-OAUTH
