--- a/server-oauth-dev.yml
+++ b/server-oauth-dev.yml
@@ -2,3 +2,12 @@ env: dev
 
 server:
   port: 8401
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+spring:
+  application:
+    name: SERVER-OAUTH
